--- a/Areas/System/Views/SysUser/Create.cshtml
+++ b/Areas/System/Views/SysUser/Create.cshtml
@@ -35,7 +35,20 @@
         @Html.TextBoxFor(modelItem => modelItem.UserName, new { @placeholder = "用户名", @class = "form-control", @required = "" })
     </div>
 </div>
-
+<div class="form-group form-groupm">
+    <label class="col-sm-2 control-label">
+        所属部门<span style="color: #FF9966"> *</span>
+    </label>
+    <div class="col-sm-4">
+        @Html.DropDownList("dept_New", deptList, new { @class = "form-control", @required = "" })
+    </div>
+    <label class="col-sm-2 control-label">
+        角色<span style="color: #FF9966"> *</span>
+    </label>
+    <div class="col-sm-4">
+        @Html.DropDownList("DefaultRoleId", RoleList, new { @class = "form-control", @required = "" })
+    </div>
+</div>
 
 <div class="form-group form-groupm">
     <label class="col-sm-2 control-label">
