--- a/Areas/Service/Views/Manage/Create.cshtml
+++ b/Areas/Service/Views/Manage/Create.cshtml
@@ -7,24 +7,25 @@
     <label class="col-sm-2 control-label">
         服务名称<span style="color: #FF9966"> *</span></label>
     <div class="col-sm-4">
-        @Html.TextBoxFor(modelItem => modelItem.ServiceName, new { @placeholder = "服务名称", @class = "form-control", @required = "" })
+        @*@Html.TextBoxFor(modelItem => modelItem.ServiceName, new { @placeholder = "服务名称", @class = "form-control", @required = "" })*@
+        @Html.DropDownListFor(m => m.ServiceName, ViewBag.ServiceList as List<SelectListItem>, "-请选择-", new { placeholder = "服务名称", @class = "form-control", required = "" })
     </div>
     <label class="col-sm-2 control-label">
         二级服务名称<span style="color: #FF9966"> *</span></label>
     <div class="col-sm-4">
-        @Html.TextBoxFor(modelItem => modelItem.SecondaryName, new { @placeholder = "二级服务名称", @class = "form-control", @required = "" })
+        @Html.TextBoxFor(modelItem => modelItem.SecondaryName, new { placeholder = "二级服务名称", @class = "form-control", required = "" })
     </div>
 </div>
 <div class="form-group form-groupm">
     <label class="col-sm-2 control-label">
         部署机器<span style="color: #FF9966"> *</span></label>
     <div class="col-sm-4">
-        @Html.TextBoxFor(modelItem => modelItem.Host, new { @placeholder = "部署机器", @class = "form-control", @required = "" })
+        @Html.TextBoxFor(modelItem => modelItem.Host, new { placeholder = "部署机器", @class = "form-control", required = "" })
     </div>
     <label class="col-sm-2 control-label">
         版本<span style="color: #FF9966"> *</span></label>
     <div class="col-sm-4">
-        @Html.TextBoxFor(modelItem => modelItem.Version, new { @placeholder = "版本", @class = "form-control", @required = "" })
+        @Html.TextBoxFor(modelItem => modelItem.Version, new { placeholder = "版本", @class = "form-control", required = "" })
     </div>
 </div>
 <div class="form-group form-groupm">
