--- a/Areas/Service/Views/Manage/Index.cshtml
+++ b/Areas/Service/Views/Manage/Index.cshtml
@@ -19,7 +19,7 @@
         float: right;
     }
     .treejg {
-        overflow: hidden;
+        overflow: auto;
         padding-right: 10px;
         border: 1px solid #ddd;
         padding-top: 6px;
