--- a/Areas/Service/Views/Manage/UploadFiles.cshtml
+++ b/Areas/Service/Views/Manage/UploadFiles.cshtml
@@ -1,6 +1,15 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    #FileUpload {
+        width: 80%;
+        position: absolute;
+    }
+    input[type=submit] {
+        float: right;
+    }
+</style>
 @using (Html.BeginForm("Upload", "Manage", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <input type="file" id="FileUpload" name="FileUpload"/>
